<resources>
    <string name="app_name">Drunk Battle</string>
    <string name="btn_begin">Начать игру</string>
    <string name="btn_about">О приложении</string>
    <string name="btn_roulette">Рулетка</string>
    <string name="btn_luck">Удача</string>
    <string name="add_player">Введте имя игрока</string>
    <string name="btn_start">Начать</string>
    <string name="btn_add_player">+</string>
    <string name="start">Старт!</string>
    <string name="stop">Стоп!</string>
    <string name="empty">Введите имя игрока!</string>
    <string name="minimum_players">Должно быть минимум 2 игрока</string>
    <string name="map">Карта</string>
    <string name="registration">Регистрация</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти или зарегестрироваться</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="welcome">"Добро пожаловать!"</string>
    <string name="invalid_username">Не действительное имя пользователя</string>
    <string name="invalid_password">Пароль должен быть >5 символов</string>
    <string name="login_failed">"Ошибка входа"</string>
    <string name="or">или</string>
    <string name="profile">Профиль</string>
    <string name="user_name">Имя пользователя</string>
    <string name="not_set">Не задано</string>
    <string name="account">Аккаунт</string>
    <string name="user_phone">Номер телефона</string>
    <string name="sign_out">Выйти из аккаунта</string>
    <string name="edit_user_name">Вы можете выбрать публичное имя\n
    пользователя в Twinkle. В этом случае вы сможете\n
    писать другим пользователям, а так же сами создавать\n
    и выставлять геопозицию.</string>
    <string name="title_activity_maps">Map</string>
</resources>