<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        app:fontFamily="@font/andika"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"/>
    <TextView
        android:id="@+id/tvUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"/>



    <Button
        android:id="@+id/btnBegin"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/btn_left_corners"
        android:onClick="playClick"
        android:text="@string/btn_begin"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btnMap"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/btn_left_corners"
        android:onClick="mapClick"
        android:text="@string/map"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/btnProfile"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:onClick="onProfile"
        android:background="@drawable/btn_left_corners"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:text="@string/profile"/>

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/btn_left_corners"
        android:onClick="aboutClick"
        android:text="@string/btn_about"
        android:layout_gravity="center"/>

</LinearLayout>