<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
       <FrameLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/ivUser"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/no_photo"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="left"/>
           <ImageButton
               android:id="@+id/btn_photo_edit"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="right|center"
               android:layout_marginRight="10dp"
               android:src="@drawable/ic_photo"
               style="@style/Widget.AppCompat.Button.Borderless"/>
       </FrameLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/red_text"
            android:layout_marginLeft="10dp"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_set"
                android:textColor="@android:color/black"
                android:layout_gravity="top|left"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:layout_gravity="bottom|left"
                android:layout_marginLeft="10dp"/>
            <ImageButton
                android:id="@+id/btn_name_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_add"
                style="@style/Widget.AppCompat.Button.Borderless"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/userEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_email"
                android:textColor="@android:color/black"
                android:layout_gravity="top|left"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_email"
                android:layout_gravity="bottom|left"
                android:layout_marginLeft="10dp"/>
            <ImageButton
                android:id="@+id/btn_email_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_add"
                style="@style/Widget.AppCompat.Button.Borderless"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/userPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_set"
                android:textColor="@android:color/black"
                android:layout_gravity="top|left"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_phone"
                android:layout_gravity="bottom|left"
                android:layout_marginLeft="10dp"/>
            <ImageButton
                android:id="@+id/btn_phone_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_add"
                style="@style/Widget.AppCompat.Button.Borderless"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/sign_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_out"
                android:textColor="@color/red_text"
                android:textStyle="bold"
                style="@style/Widget.AppCompat.Button.Borderless"/>
        </FrameLayout>

    </LinearLayout>
</ScrollView>